// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiShowFor block is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--xs--block testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiShowFor flex is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--xs--flex testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiShowFor inlineBlock is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--xs--inlineBlock testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiShowFor l is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--l testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiShowFor m is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--m testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiShowFor s is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--s testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiShowFor xl is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--xl testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`EuiShowFor xs is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiShowFor eui-showFor--xs testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;
